--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ https://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-users fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text my4">CERTIFICATES</span>
+                                            <span class="tm-nav-text my4">ACHIVEMENTS</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
                                         <div class="product__description">
