--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="img/vesnvi1.JPG" alt="vaishnavi sahu">
+                    <img src="assets/img/alex-vidal.png" alt="vaishnavi sahu">
                 </div>
 
             </div>
