--- a/index2.html
+++ b/index2.html
@@ -185,7 +185,7 @@ and i love to do things creatively and differently.</italic></p>
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/MYWORK.jpg" class="img-res" alt="">
+                            <img src="img/MYWORK.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Tic Tac Toe</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
